# vio_drone

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.px4  README.md  docker-compose.yml  docker-entrypoint-px4.sh  docker-entrypoint.sh  requirements.txt
vio_backend/: package.xml  setup.cfg  setup.py
vio_backend/vio_backend/: backend_node.py  imu_preintegrator.py  initializer.py  state_estimator.py
vio_bridge/: package.xml  setup.py
vio_bridge/vio_bridge/: bridge_node.py
vio_eval/: package.xml  setup.cfg  setup.py
vio_eval/vio_eval/: eval_node.py
vio_frontend/: package.xml  setup.cfg  setup.py
vio_frontend/vio_frontend/: frontend_node.py
vio_interfaces/: CMakeLists.txt  package.xml
vio_interfaces/msg/: TrackedFeatures.msg  VioState.msg
vio_sim/: CMakeLists.txt  package.xml
vio_sim/config/: camera_params.yaml
vio_sim/launch/: full_system_launch.py  sim_launch.py
vio_sim/models/x500_vio/: model.config  model.sdf
vio_sim/worlds/: default.sdf
